bubba-backend (1.2.4.10) claire; urgency=low

  [ Carl Fürstenberg ]
  * updating cupsd.conf, chainging @LOCAL to @IF(eth1) (Closes: #1071)
  * evil '==' changed to non-evil 'eq' in firewall.pl 

  [ Tor Krill ]
  * Save firewall rules to local file after changing lan if
  * Trim return value when retrieving lan if from networkmanager 

 -- Tor Krill <tor@excito.com>  Mon, 30 Nov 2009 08:18:33 +0100

bubba-backend (1.2.4.9) claire; urgency=low

  * adding divert for smb.conf 
  * bumping depends on samba to 3.4

 -- Carl Fürstenberg <carl@excito.com>  Thu, 26 Nov 2009 12:55:36 +0100

bubba-backend (1.2.4.8) claire; urgency=low

  * divert 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 19 Nov 2009 13:07:54 +0100

bubba-backend (1.2.4.7) claire; urgency=low

  * updating cups dependices to allow future use of cups instead of cupsys 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 19 Nov 2009 12:43:55 +0100

bubba-backend (1.2.4.6) claire; urgency=low

  * Remove usage of LANINTERFACE constant
  * Some code cleanups

 -- Tor Krill <tor@excito.com>  Wed, 18 Nov 2009 23:30:20 +0100

bubba-backend (1.2.4.5) claire; urgency=low

  * Bump version

 -- Carl Fürstenberg <carl@excito.com>  Mon, 09 Nov 2009 17:57:27 +0100

bubba-backend (1.2.2.5) claire; urgency=low

  * change many eth1 to utilize networkmanager
  * adding netowkrmanager client script for temporary use

 -- Carl Fürstenberg <carl@excito.com>  Mon, 09 Nov 2009 14:11:11 +0100

bubba-backend (1.2.2.4) karmic; urgency=low

  * dev rel 

 -- Carl Fürstenberg <carl@excito.com>  Thu, 05 Nov 2009 16:42:15 +0100

bubba-backend (1.2.2.3) claire; urgency=low

  * Fix regex i get_package_versions to allow + in version 

 -- Tor Krill <tor@excito.com>  Wed, 04 Nov 2009 23:00:41 +0100

bubba-backend (1.2.2.2) claire; urgency=low

  * change default ui notify level from 3 to 2 
  * double freq 
  * updated mdadm event messages 
  * modify user management in systembackup to add and remove users and groups
    dynamically