@@ -61,7 +61,7 @@ my %commands=(
 	"set_static_netcfg"		=> [\&Bubba::set_static_netcfg ,4],
 	"set_dynamic_netcfg"	=> [\&Bubba::set_dynamic_netcfg ,1],
 	"set_nameserver"		=> [\&Bubba::set_nameserver ,1],
-	"dnsmasq_config"		=> [\&Bubba::dnsmasq_config ,3],
+	"dnsmasq_config"		=> [\&Bubba::dnsmasq_config ,4],
 	"easyfind"				=> [\&Bubba::easyfind ,2],
 	"get_interfaces"		=> [\&Bubba::do_get_interfaces,0],
 	"get_link"				=> [\&Bubba::get_link, 1],
